modify css file

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         <div class="modal-content"></div>
     </article>
     <footer class="license-footer">
-        Create by <b>Fombi</b> and <b>Zuheb</b> under CC license
+        Create by <b>celyne
     </footer>     
 <script defer type="module" src="index.js"></script>   
 </body>
